--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>nl.hu.ipass.receptgen</groupId>
   <artifactId>ReceptGen</artifactId>
@@ -30,6 +30,22 @@
       <version>2.17</version>
     </dependency>
     <dependency>
+      <groupId>org.glassfish.jersey.containers</groupId>
+      <artifactId>jersey-container-servlet</artifactId>
+      <version>2.17</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glassfish.jersey.media</groupId>
+      <artifactId>jersey-media-json-jackson</artifactId>
+      <version>2.17</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.azure</groupId>
+      <artifactId>azure-core</artifactId>
+      <version>1.41.0</version>
+    </dependency>
+    <dependency>
       <groupId>com.microsoft.azure</groupId>
       <artifactId>azure-storage</artifactId>
       <version>8.6.6</version>
@@ -45,8 +61,22 @@
       <version>2.1.1</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-annotations</artifactId>
+      <version>2.6.5</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.6.5</version>
+    </dependency>
 
-
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-core</artifactId>
+      <version>2.6.5</version>
+    </dependency>
 
   </dependencies>
   <build>
@@ -58,5 +88,34 @@
         </plugin>
       </plugins>
     </pluginManagement>
+      <plugins>
+          <plugin>
+              <groupId>com.microsoft.azure</groupId>
+              <artifactId>azure-webapp-maven-plugin</artifactId>
+              <version>2.10.0</version>
+              <configuration>
+                  <schemaVersion>v2</schemaVersion>
+                  <resourceGroup>ReceptGen-1692530693824-rg</resourceGroup>
+                  <appName>ReceptGen-1692530693824</appName>
+                  <pricingTier>F1</pricingTier>
+                  <region>centralus</region>
+                  <runtime>
+                      <os>Linux</os>
+                      <javaVersion>Java 17</javaVersion>
+                      <webContainer>Tomcat 9.0</webContainer>
+                  </runtime>
+                  <deployment>
+                      <resources>
+                          <resource>
+                              <directory>${project.basedir}/target</directory>
+                              <includes>
+                                  <include>*.war</include>
+                              </includes>
+                          </resource>
+                      </resources>
+                  </deployment>
+              </configuration>
+          </plugin>
+      </plugins>
   </build>
 </project>
